# nerf_practice

./: .gitignore  README.md
cpp/: CMakeLists.txt  basic_radiance_field.cpp  basic_radiance_field.hpp  camera_intrinsic_parameter.cpp  camera_intrinsic_parameter.hpp  data.cpp  data.hpp  main.cpp  nerf_function.cpp  nerf_function.hpp  nerf_loss.cpp  nerf_loss.hpp  nerf_model.cpp  nerf_model.hpp  neural_network.hpp  pose.hpp  position.hpp  radiance_field.cpp  radiance_field.hpp  ray_data.cpp  ray_data.hpp  timer.hpp  utils.hpp  view.cpp  view.hpp
cpp/dim-slam-nerf/: nerf.cpp  nerf.hpp  voxel_based_radiance_field.cpp  voxel_based_radiance_field.hpp
cpp/main/: infer.cpp  test.cpp  test_dim-slam-nerf.cpp  train.cpp
python/: .gitignore  README.md  camera_intrinsic_parameter.py  constants.py  convert_tsv_to_poses.py  infer.py  make_dataset.py  multi_resolution_hash_encoder.py  nerf_function.py  nerf_loss.py  nerf_model.py  positional_encoder_freq.py  positional_encoder_grid.py  positional_encoder_grid2.py  radiance_field.py  radiance_field_freq.py  radiance_field_grid.py  sample_function.py  test.py  train.py  utils.py
shell_script/: apply_clang_format.sh  apply_mypy.sh  build_and_exec_train_and_infer.sh  download_libtorch.sh  exec_python_nerf.sh
